force-app/main/default/objects/ARTL_Feasibility__c/ARTL_Feasibility__c.object-meta.xml
<CustomObject>
    <label>Feasibility</label>
    <nameField>
        <displayFormat>FS-{00000000}</displayFormat>
        <label>Feasibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feasibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>