force-app/main/default/objects/ARTL_Feasibility__c/fields/ARTL_Feasibility_ID__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Feasibility_ID__c</fullName>
    <externalId>true</externalId>
    <label>Feasibility ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>