force-app/main/default/objects/ARTL_Feasibility__c/fields/ARTL_Feasibility_Status__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Feasibility_Status__c</fullName>
    <label>Feasibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FEASIBLE</fullName>
                <label>Feasible</label>
            </value>
            <value>
                <fullName>NOT_FEASIBLE</fullName>
                <label>Not Feasible</label>
            </value>
            <value>
                <fullName>PENDING</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>MANUAL_INTERVENTION_REQUIRED</fullName>
                <label>Manual Intervention Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>